Update description and metadata

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         }
     </script>
     <meta charset="utf-8">
-    <meta property="og:title" content="simplify.">
-    <meta property="og:description" content="Spacey jest wirtualnym projektantem wnętrz. Podobnie jak tradycyjny projektant, najpierw zada Ci kilka pytań żeby poznać Twoje potrzeby i Twój gust, a później zaproponuje Ci kilka wariantów projektu Twojego wnętrza.">
-    <meta property="og:image" content="https://spacey.ai/hero.png">
+    <meta property="og:title" content="Spacey. Wirtualny projektant wnętrz">
+    <meta property="og:description" content="Podobnie jak tradycyjny projektant, Spacey najpierw zada Ci kilka pytań żeby poznać Twoje potrzeby i Twój gust, a później zaproponuje Ci kilka wariantów projektu Twojego wnętrza. Spacey to aplikacja internetowa oparta na wiedzy i doświadczeniu projektantów. Nie musisz umawiać się na spotkanie ani czekać na swój projekt wielu dni. Zobaczysz go błyskawicznie, o każdej porze dnia i nocy. Jeśli zakwalifikujesz się do naszego programu pilotażowego, projekt wnętrza możesz dostać od nas bezpłatnie. Projekt stworzony przez Spacey zawsze będzie kosztował znacznie mniej niż u tradycyjnego projektanta.">
+    <meta property="og:image" content="https://spacey.ai/hero.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@spaceyAI">
     <meta name="twitter:creator" content="@architectcodes">
-    <meta name="description" content="Spacey jest wirtualnym projektantem wnętrz. Podobnie jak tradycyjny projektant, najpierw zada Ci kilka pytań żeby poznać Twoje potrzeby i Twój gust, a później zaproponuje Ci kilka wariantów projektu Twojego wnętrza.">
+    <meta name="description" content="Podobnie jak tradycyjny projektant, Spacey najpierw zada Ci kilka pytań żeby poznać Twoje potrzeby i Twój gust, a później zaproponuje Ci kilka wariantów projektu Twojego wnętrza. Spacey to aplikacja internetowa oparta na wiedzy i doświadczeniu projektantów. Nie musisz umawiać się na spotkanie ani czekać na swój projekt wielu dni. Zobaczysz go błyskawicznie, o każdej porze dnia i nocy. Jeśli zakwalifikujesz się do naszego programu pilotażowego, projekt wnętrza możesz dostać od nas bezpłatnie. Projekt stworzony przez Spacey zawsze będzie kosztował znacznie mniej niż u tradycyjnego projektanta.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=Promise"></script>
@@ -171,7 +171,7 @@
         <div class="features__feature">
             <img src="/images/icons8-design.svg" alt="">
             <h3>jak długo powstaje projekt?</h3>
-            <p>Spacey to&nbsp;aplikacja oparta na&nbsp;wiedzy i&nbsp;doświadczeniu projektantów. Nie&nbsp;musisz umawiać się na&nbsp;spotkanie ani&nbsp;czekać na&nbsp;swój projekt wielu dni. Zobaczysz go błyskawicznie, o&nbsp;każdej porze dnia i&nbsp;nocy.</p>
+            <p>Spacey to&nbsp;aplikacja internetowa oparta na&nbsp;wiedzy i&nbsp;doświadczeniu projektantów. Nie&nbsp;musisz umawiać się na&nbsp;spotkanie ani&nbsp;czekać na&nbsp;swój projekt wielu dni. Zobaczysz go błyskawicznie, o&nbsp;każdej porze dnia i&nbsp;nocy.</p>
         </div>
 
         <div class="features__feature">
