Make analytics GDPR compliant

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             window.dataLayer = window.dataLayer || [];
             function gtag() { dataLayer.push(arguments); }
             gtag('js', new Date());
-            gtag('config', 'UA-132681474-1');
+            gtag('config', analyticsId, {anonymize_ip: true});
         })();
     </script>
     <meta charset="utf-8">
