Switch analytics to dev account

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             const isLocalHost =
                 /^(?:localhost|(?:\d+\.){3}\d+)(?:\:\d+)?$/
                 .test(window.location.host);
-            if (isLocalHost) return;
+            // if (isLocalHost) return;
 
-            const analyticsId = 'UA-132681474-1';
+            const analyticsId = 'UA-132681474-2';
             const analyticsScript = Object.assign(
                 document.createElement('script'),
                 {
