Redirect to locoom.co

--- a/index.html
+++ b/index.html
@@ -1,303 +1,3 @@
 <!doctype html>
-<html lang="en" dir="ltr">
-
-<head>
-    <title>Spacey. Wirtualny projektant wnętrz</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,900,600" rel="stylesheet">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-
-        (function() {
-            // Add ?dnt to the search string to opt out of GA
-            const doNotTrackUrl = /[?&]dnt($|=|&)/.test(window.location.search);
-            if (doNotTrackUrl) {
-                document.cookie = 'doNotTrack=true; max-age=' + 60*60*24*365*10;
-                return;
-            }
-            const doNotTrackCookie = /(^|;)\s*doNotTrack=/.test(document.cookie)
-            if (doNotTrackCookie) {
-                return;
-            }
-
-            // Don’t track on local
-            const isLocalHost =
-                /^(?:localhost|(?:\d+\.){3}\d+)(?:\:\d+)?$/
-                .test(window.location.host);
-            if (isLocalHost) return;
-
-            const analyticsId = 'UA-132681474-1';
-            const analyticsScript = Object.assign(
-                document.createElement('script'),
-                {
-                    src: 'https://www.googletagmanager.com/gtag/js?id=' + analyticsId,
-                    async: true,
-                }
-            );
-            document.head.appendChild(analyticsScript);
-            gtag('js', new Date());
-            gtag('config', analyticsId, {anonymize_ip: true});
-        })();
-    </script>
-    <meta charset="utf-8">
-    <meta property="og:title" content="Spacey. Wirtualny projektant wnętrz">
-    <meta property="og:description" content="Podobnie jak tradycyjny projektant, Spacey najpierw zada Ci kilka pytań żeby poznać Twoje potrzeby i Twój gust, a później zaproponuje Ci kilka wariantów projektu Twojego wnętrza. Spacey to aplikacja internetowa oparta na wiedzy i doświadczeniu projektantów. Nie musisz umawiać się na spotkanie ani czekać na swój projekt wiele dni. Zobaczysz go błyskawicznie, o każdej porze dnia i nocy. Jeśli zakwalifikujesz się do naszego programu pilotażowego, projekt wnętrza możesz dostać od nas bezpłatnie. Projekt stworzony przez Spacey zawsze będzie kosztował znacznie mniej niż u tradycyjnego projektanta.">
-    <meta property="og:image" content="https://spacey.ai/hero.jpg">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@spaceyAI">
-    <meta name="twitter:creator" content="@architectcodes">
-    <meta name="description" content="Podobnie jak tradycyjny projektant, Spacey najpierw zada Ci kilka pytań żeby poznać Twoje potrzeby i Twój gust, a później zaproponuje Ci kilka wariantów projektu Twojego wnętrza. Spacey to aplikacja internetowa oparta na wiedzy i doświadczeniu projektantów. Nie musisz umawiać się na spotkanie ani czekać na swój projekt wiele dni. Zobaczysz go błyskawicznie, o każdej porze dnia i nocy. Jeśli zakwalifikujesz się do naszego programu pilotażowego, projekt wnętrza możesz dostać od nas bezpłatnie. Projekt stworzony przez Spacey zawsze będzie kosztował znacznie mniej niż u tradycyjnego projektanta.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style.css">
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=Promise"></script>
-</head>
-<body>
-    <header class="header topMenu__spacer">
-        <div class="header__backgroundPreview"></div>
-        <div class="header__background"></div>
-
-        <h1 class="header__tagline content">Wirtualny<br />projektant<br />wnętrz.</h1>
-
-        <div class="header__callout callout parallax">
-            <h1>👋 Hej!</h1>
-            <p>Mamy jeszcze kilka miejsc w&nbsp;naszym bezpłatnym pilotażu. Przetestuj Spacey, a&nbsp;dostaniesz od&nbsp;nas bezpłatnie projekt Twojego wnętrza. To jedyna szansa! 😇</p>
-            <form action="https://docs.google.com/forms/d/e/1FAIpQLSdycgx0QwDq-HJFxlUzK7ojCS6kKdoX-I9t9FWDu-A48WLaIg/viewform?usp=pp_url" target="_blank" class="cta__form" data-analytics-label="Header form">
-                <input class="cta__emailInput" name="entry.1467209122" placeholder="mój adres email">
-                <input type="submit" class="cta" value="Testuj z moim wnętrzem">
-            </form>
-        </div>
-
-
-        <script>
-            (function() {
-                const background = document.querySelector('.header__background');
-                const finish = function() {
-                    background.classList.remove('header__background--hidden');
-                };
-                const loader = new Image();
-                Promise.all([
-                    new Promise(function(resolve) {
-                        loader.addEventListener('load', resolve)
-                    }),
-                    new Promise(function(resolve) {
-                        setTimeout(resolve, 500)
-                    }),
-                ]).then(finish);
-                loader.src = '/images/header-background.jpg';
-                if (!loader.complete) {
-                    background.classList.add('header__background--hidden');
-                }
-            })();
-        </script>
-    </header>
-
-    <div class="topMenu content__paddingMirror" id="topMenu">
-        <div class="content topMenu__content">
-            <a class="logo topMenu__logo" href="https://spacey.ai" title="Spacey. Wirtualny projektant wnętrz">
-                <svg width="30" height="55" viewBox="0 0 30 55"><path d="M17.347 22.2712H29.0059L11.6588 54.764V32.4924H0L17.347 0V22.2712Z" fill="currentColor"/></svg>
-                <span class="logo__wordmark">Spacey</span>
-            </a>
-
-            <input type="checkbox" class="topMenu__toggleCheckbox" id="topMenuToggle">
-            <label for="topMenuToggle" class="topMenu__openMenu">
-                menu
-                <svg width="24" height="24" viewBox="0 0 24 24"><path d="M 2 5 L 2 7 L 22 7 L 22 5 L 2 5 z M 2 11 L 2 13 L 22 13 L 22 11 L 2 11 z M 2 17 L 2 19 L 22 19 L 22 17 L 2 17 z" fill="currentColor"/></svg>
-            </label>
-            <label for="topMenuToggle" class="topMenu__closeMenu">
-                <svg width="24" height="24" viewBox="0 0 24 24"><path d="M 4.7070312 3.2929688 L 3.2929688 4.7070312 L 10.585938 12 L 3.2929688 19.292969 L 4.7070312 20.707031 L 12 13.414062 L 19.292969 20.707031 L 20.707031 19.292969 L 13.414062 12 L 20.707031 4.7070312 L 19.292969 3.2929688 L 12 10.585938 L 4.7070312 3.2929688 z" fill="currentColor"/></svg>
-            </label>
-
-            <div class="topMenu__spacer"></div>
-
-            <ul class="topMenu__textOptions">
-                <li>
-                    <a href="#product">Produkt</a>
-                </li>
-                <li>
-                    <a href="#pilot-program">Program pilotażowy</a>
-                </li>
-                <li>
-                    <a href="#contact">Kontakt</a>
-                </li>
-            </ul>
-
-            <ul class="topMenu__iconOptions">
-                <li>
-                    <a href="https://www.instagram.com/spacey.ai/" title="Obserwuj nas na Instagramie" target="_blank">
-                        <svg width="24" height-"24" viewBox="0 0 24 24"><path d="M 8 3 C 5.239 3 3 5.239 3 8 L 3 16 C 3 18.761 5.239 21 8 21 L 16 21 C 18.761 21 21 18.761 21 16 L 21 8 C 21 5.239 18.761 3 16 3 L 8 3 z M 18 5 C 18.552 5 19 5.448 19 6 C 19 6.552 18.552 7 18 7 C 17.448 7 17 6.552 17 6 C 17 5.448 17.448 5 18 5 z M 12 7 C 14.761 7 17 9.239 17 12 C 17 14.761 14.761 17 12 17 C 9.239 17 7 14.761 7 12 C 7 9.239 9.239 7 12 7 z M 12 9 A 3 3 0 0 0 9 12 A 3 3 0 0 0 12 15 A 3 3 0 0 0 15 12 A 3 3 0 0 0 12 9 z" fill="currentColor"/></svg>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/spaceyAI/" title="Polub nas na Facebooku" target="_blank">
-                        <svg width="24" height="24" viewBox="0 0 24 24"><path d="M19,3H5C3.895,3,3,3.895,3,5v14c0,1.105,0.895,2,2,2h7.621v-6.961h-2.343v-2.725h2.343V9.309 c0-2.324,1.421-3.591,3.495-3.591c0.699-0.002,1.397,0.034,2.092,0.105v2.43h-1.428c-1.13,0-1.35,0.534-1.35,1.322v1.735h2.7 l-0.351,2.725h-2.365V21H19c1.105,0,2-0.895,2-2V5C21,3.895,20.105,3,19,3z" fill="currentColor"/></svg>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/company/spacey-ai/" title="Obserwuj nas na LinkedIn" target="_blank">
-                        <svg width="24" height="24" viewBox="0 0 24 24"><path d="M19,3H5C3.895,3,3,3.895,3,5v14c0,1.105,0.895,2,2,2h14c1.105,0,2-0.895,2-2V5C21,3.895,20.105,3,19,3z M9,17H6.477v-7H9 V17z M7.694,8.717c-0.771,0-1.286-0.514-1.286-1.2s0.514-1.2,1.371-1.2c0.771,0,1.286,0.514,1.286,1.2S8.551,8.717,7.694,8.717z M18,17h-2.442v-3.826c0-1.058-0.651-1.302-0.895-1.302s-1.058,0.163-1.058,1.302c0,0.163,0,3.826,0,3.826h-2.523v-7h2.523v0.977 C13.93,10.407,14.581,10,15.802,10C17.023,10,18,10.977,18,13.174V17z" fill="currentColor"/></svg>
-                    </a>
-                </li>
-            </ul>
-        </div>
-
-        <script>
-            (function() {
-                const topMenu = document.querySelector('#topMenu');
-                const topMenuToggle = document.querySelector('#topMenuToggle');
-
-                // Fade on scroll
-                let scrolledDown = false;
-                function checkScroll() {
-                    topMenu.classList.add('topMenu--scrolledRecently');
-                    if (window.scrollY > 0 && !scrolledDown) {
-                        topMenu.classList.add('topMenu--scrolledDown');
-                        scrolledDown = true;
-                    } else if (window.scrollY <= 0 && scrolledDown) {
-                        topMenu.classList.remove('topMenu--scrolledDown');
-                        scrolledDown = false;
-                    }
-                }
-                checkScroll();
-                document.addEventListener('scroll', checkScroll);
-
-                // No animation on mobile menu toggle
-                function checkUnfolded() {
-                    topMenu.classList.remove('topMenu--scrolledRecently');
-                    if (topMenuToggle.checked) {
-                        topMenu.classList.add('topMenu--unfolded');
-                    } else {
-                        topMenu.classList.remove('topMenu--unfolded');
-                    }
-                }
-                checkUnfolded();
-                topMenuToggle.addEventListener('change', checkUnfolded);
-
-                // Hide menu after picking an option
-                topMenu.addEventListener('click', function(event) {
-                    if (event.target.tagName !== 'A') return;
-                    topMenuToggle.checked = false;
-                    checkUnfolded();
-                });
-
-                // Apply JS-dependent styles
-                topMenu.classList.add('topMenu--withJs');
-            })()
-        </script>
-    </div>
-
-    <div class="features content topMenu__anchorParent">
-        <a id="product" class="topMenu__anchor"></a>
-        <div class="features__feature">
-            <img src="/images/icons8-paint_palette.svg" alt="">
-            <h3>jak działa Spacey?</h3>
-            <p>Spacey jest wirtualnym projektantem wnętrz. Podobnie jak tradycyjny projektant, najpierw zada Ci kilka pytań żeby poznać Twoje potrzeby i&nbsp;Twój gust, a&nbsp;później zaproponuje Ci kilka wariantów projektu Twojego wnętrza.</p>
-        </div>
-
-        <div class="features__feature">
-            <img src="/images/icons8-design.svg" alt="">
-            <h3>jak długo powstaje projekt?</h3>
-            <p>Spacey to&nbsp;aplikacja internetowa oparta na&nbsp;wiedzy i&nbsp;doświadczeniu projektantów. Nie&nbsp;musisz umawiać się na&nbsp;spotkanie ani&nbsp;czekać na&nbsp;swój projekt wiele dni. Zobaczysz go błyskawicznie, o&nbsp;każdej porze dnia i&nbsp;nocy.</p>
-        </div>
-
-        <div class="features__feature">
-            <img src="/images/icons8-check_all.svg" alt="">
-            <h3>ile to kosztuje?</h3>
-            <p>Jeśli zakwalifikujesz się do&nbsp;naszego programu pilotażowego, projekt wnętrza możesz dostać od&nbsp;nas bezpłatnie. Projekt stworzony przez&nbsp;Spacey zawsze będzie kosztował znacznie mniej niż u&nbsp;tradycyjnego projektanta.</p>
-        </div>
-    </div>
-
-    <footer class="footer">
-        <div class="footer__filler footer__filler--image1"></div>
-        <section class="footer__section footer__section--light footer__section--pilotProgram">
-            <img src="/images/footer-filler-image-1.jpg" width="1300" height="531">
-            <div class="footer__sectionContent content content--noMaxWidth topMenu__anchorParent">
-                <a id="pilot-program" class="topMenu__anchor"></a>
-                <h3>Pilotaż trwa!</h3>
-                <p>Pierwsze 50&nbsp;osób które zakwalifikuje&nbsp;się do&nbsp;programu pilotażowego dostanie od&nbsp;nas bezpłatny projekt wnętrza. Udział w&nbsp;pilotażu polega na&nbsp;przetestowaniu aplikacji internetowej Spacey.</p>
-                <p>Aby wziąć udział w&nbsp;kwalifikacjach, wypełnij formularz poniżej.</p>
-                <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLSdycgx0QwDq-HJFxlUzK7ojCS6kKdoX-I9t9FWDu-A48WLaIg/viewform?usp=pp_url" target="_blank" data-analytics-label="Footer form">
-                    <input type="email" name="entry.1467209122" placeholder="adres email">
-                    <input type="submit" value="Kontynuuj">
-                </form>
-            </div>
-        </section>
-        <div class="footer__filler footer__filler--image2"></div>
-        <section class="footer__section footer__section--dark">
-            <div class="footer__sectionContent content content--noMaxWidth">
-                <div class="contactDetails topMenu__anchorParent">
-                    <a id="contact" class="topMenu__anchor"></a>
-                    <div class="logo contactDetails__logo">
-                        <svg width="30" height="55" viewBox="0 0 30 55">
-                            <path d="M17.347 22.2712H29.0059L11.6588 54.764V32.4924H0L17.347 0V22.2712Z" fill="currentColor" /></svg>
-                        <span class="logo__wordmark logo__wordmark--heavy">Spacey</span>
-                        <span class="logo__suffix">sp. z o. o.</span>
-                    </div>
-                    <dl class="contactDetails__details">
-                        <a href="mailto:info@spacey.ai">
-                            <dt>
-                                <svg width="24" height="24" viewBox="0 0 24 24"><title>Adres email</title><path d="M20,4H4C2.895,4,2,4.895,2,6v12c0,1.105,0.895,2,2,2h16c1.105,0,2-0.895,2-2V6C22,4.895,21.105,4,20,4z M20,8l-8,5L4,8V6 l8,5l8-5V8z" fill="currentColor" /></svg>
-                            </dt>
-                            <dl>info@spacey.ai</dl>
-                        </a>
-                        <div>
-                            <dt>
-                                <svg width="24" height="24" viewBox="0 0 24 24"><title>Siedziba</title><path d="M12,2C8.134,2,5,5.134,5,9c0,5,7,13,7,13s7-8,7-13C19,5.134,15.866,2,12,2z M12,11.5c-1.381,0-2.5-1.119-2.5-2.5 c0-1.381,1.119-2.5,2.5-2.5s2.5,1.119,2.5,2.5C14.5,10.381,13.381,11.5,12,11.5z" fill="currentColor" /></svg>
-                            </dt>
-                            <dl><span class="nowrap">ul. Poznańska 2c,</span> <span class="nowrap">34-084 Rzeszów</span></dl>
-                        </div>
-                        <div>
-                            <dt>
-                                <svg width="24" height="24" viewBox="0 0 24 24"><title>Dane KRS</title><path d="M12,1L3,5c0,0,0,4,0,6c0,7.83,6.439,11.486,9,12c2.561-0.514,9-4.17,9-12c0-2,0-6,0-6L12,1z M11,16.414l-4.185-4.185 l1.414-1.414L11,13.586l5.792-5.792l1.414,1.414L11,16.414z" fill="currentColor" /></svg>
-                            </dt>
-                            <dl class="nowrap">NIP 813-380-92-65</dl>
-                        </div>
-                        <a href="https://www.instagram.com/spacey.ai/" title="Obserwuj nas na Instagramie" target="_blank">
-                            <dt>
-                                <svg width="24" height-"24" viewBox="0 0 24 24"><title>Instagram</title><path d="M 8 3 C 5.239 3 3 5.239 3 8 L 3 16 C 3 18.761 5.239 21 8 21 L 16 21 C 18.761 21 21 18.761 21 16 L 21 8 C 21 5.239 18.761 3 16 3 L 8 3 z M 18 5 C 18.552 5 19 5.448 19 6 C 19 6.552 18.552 7 18 7 C 17.448 7 17 6.552 17 6 C 17 5.448 17.448 5 18 5 z M 12 7 C 14.761 7 17 9.239 17 12 C 17 14.761 14.761 17 12 17 C 9.239 17 7 14.761 7 12 C 7 9.239 9.239 7 12 7 z M 12 9 A 3 3 0 0 0 9 12 A 3 3 0 0 0 12 15 A 3 3 0 0 0 15 12 A 3 3 0 0 0 12 9 z" fill="currentColor" /></svg>
-                            </dt>
-                            <dl>@spacey.ai</dl>
-                        </a>
-                        <a href="https://www.facebook.com/spaceyAI/" title="Polub nas na Facebooku" target="_blank">
-                            <dt>
-                                <svg width="24" height="24" viewBox="0 0 24 24"><title>Facebook</title><path d="M19,3H5C3.895,3,3,3.895,3,5v14c0,1.105,0.895,2,2,2h7.621v-6.961h-2.343v-2.725h2.343V9.309 c0-2.324,1.421-3.591,3.495-3.591c0.699-0.002,1.397,0.034,2.092,0.105v2.43h-1.428c-1.13,0-1.35,0.534-1.35,1.322v1.735h2.7 l-0.351,2.725h-2.365V21H19c1.105,0,2-0.895,2-2V5C21,3.895,20.105,3,19,3z" fill="currentColor" /></svg>
-                            </dt>
-                            <dl>/&thinsp;spaceyAI</dl>
-                        </a>
-                        <a href="https://www.linkedin.com/company/spacey-ai/" title="Obserwuj nas na LinkedIn" target="_blank">
-                            <dt>
-                                <svg width="24" height="24" viewBox="0 0 24 24"><title>LinkedIn</title><path d="M19,3H5C3.895,3,3,3.895,3,5v14c0,1.105,0.895,2,2,2h14c1.105,0,2-0.895,2-2V5C21,3.895,20.105,3,19,3z M9,17H6.477v-7H9 V17z M7.694,8.717c-0.771,0-1.286-0.514-1.286-1.2s0.514-1.2,1.371-1.2c0.771,0,1.286,0.514,1.286,1.2S8.551,8.717,7.694,8.717z M18,17h-2.442v-3.826c0-1.058-0.651-1.302-0.895-1.302s-1.058,0.163-1.058,1.302c0,0.163,0,3.826,0,3.826h-2.523v-7h2.523v0.977 C13.93,10.407,14.581,10,15.802,10C17.023,10,18,10.977,18,13.174V17z" fill="currentColor" /></svg>
-                            </dt>
-                            <dl>@spacey-ai</dl>
-                        </a>
-                    </dl>
-                </div>
-            </div>
-        </section>
-    </footer>
-
-    <script>
-        (function () {
-            // Form submit analytics
-            document.querySelectorAll('form').forEach(function(form) {
-                form.addEventListener('submit', function(event) {
-                    gtag('event', 'Submit', {
-                        event_category: 'Forms',
-                        event_label: event.target.getAttribute('data-analytics-label'),
-                    });
-                });
-            })
-
-            // Parallax scrolling
-           const parallax = document.querySelectorAll('.parallax');
-           function updateScroll() {
-               parallax.forEach(function(element) {
-                   element.style.top = Math.min(-window.scrollY / 5) + 'px';
-               });
-           };
-           updateScroll
-           document.addEventListener('scroll', updateScroll);
-        })()
-    </script>
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://locoom.co/?utm_source=spacey-homepage&utm_medium=redirect" />
+<p>If you’re not redirected automatically, <a href="https://locoom.co/?utm_source=spacey-homepage&utm_medium=redirect">click this link</a>.</p>
